Fix Return Type Of Specification Find All in BaseService.java and Add Spring SecurityConfig.java