@@ -7,9 +7,7 @@ import com.rostami.onlineservice.dto.in.create.AdCreateParam;
 import com.rostami.onlineservice.dto.in.update.AdUpdateParam;
 import com.rostami.onlineservice.dto.out.CreateUpdateResult;
 import com.rostami.onlineservice.dto.out.single.AdFindResult;
-import com.rostami.onlineservice.dto.out.single.MainServFindResult;
-import com.rostami.onlineservice.entity.Ad;
-import com.rostami.onlineservice.entity.MainServ;
+import com.rostami.onlineservice.model.Ad;
 import com.rostami.onlineservice.service.AdService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
@@ -20,8 +18,6 @@ import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @RestController
 @RequestMapping("/ads")
@@ -64,9 +60,7 @@ public class AdController {
     @GetMapping("/all")
     public ResponseEntity<ResponseResult<List<AdFindResult>>> readAll(@RequestParam Integer page){
         Pageable pageable = PageRequest.of(page, 5);
-        Stream<Ad> stream = adService.findAll(pageable).get();
-        List<AdFindResult> results =
-                stream.map(ad -> AdFindResult.builder().build().convertToDto(ad)).collect(Collectors.toList());
+        List<AdFindResult> results = adService.findAll(pageable).stream().map(adOutDto -> (AdFindResult) adOutDto).toList();
         return ResponseEntity.ok(ResponseResult.<List<AdFindResult>>builder()
                 .code(0)
                 .message("All Ads Loaded Successfully.")
@@ -78,8 +72,8 @@ public class AdController {
     public ResponseEntity<ResponseResult<List<AdFindResult>>> filter(@RequestBody AdFilter filter, @RequestParam Integer page){
         Pageable pageable = PageRequest.of(page, 5);
         Specification<Ad> specification = new AdSpecification().getAds(filter);
-        List<Ad> all = adService.findAll(specification, pageable);
-        List<AdFindResult> result = all.stream().map(ad -> AdFindResult.builder().build().convertToDto(ad)).toList();
+        List<AdFindResult> result = adService.findAll(specification, pageable)
+                .stream().map(ad -> (AdFindResult) ad).toList();
         return ResponseEntity.ok(ResponseResult.<List<AdFindResult>>builder()
                 .code(0)
                 .message("Successfully Load All Ads Based On Filter.")
@@ -105,6 +99,17 @@ public class AdController {
                 .code(0)
                 .message("Successfully Load All Related Ads.")
                 .data(allAdsOfCustomer)
+                .build());
+    }
+
+    @GetMapping("/findRelatedAds/{id}")
+    public ResponseEntity<ResponseResult<List<AdFindResult>>> findRelatedAds(@PathVariable Long id, @RequestParam Integer page){
+        Pageable pageable = PageRequest.of(page, 5);
+        List<AdFindResult> result = adService.findAdsRelatedToExpertSubServ(id, pageable);
+        return ResponseEntity.ok(ResponseResult.<List<AdFindResult>>builder()
+                .code(0)
+                .message("Successfully Load All Related Ads.")
+                .data(result)
                 .build());
     }
 }
