@@ -4,10 +4,7 @@ import com.rostami.onlineservice.dto.api.ResponseResult;
 import com.rostami.onlineservice.dto.in.create.CreditCreateParam;
 import com.rostami.onlineservice.dto.in.update.CreditUpdateParam;
 import com.rostami.onlineservice.dto.out.CreateUpdateResult;
-import com.rostami.onlineservice.dto.out.single.AdFindResult;
 import com.rostami.onlineservice.dto.out.single.CreditFindResult;
-import com.rostami.onlineservice.entity.Ad;
-import com.rostami.onlineservice.entity.Credit;
 import com.rostami.onlineservice.service.CreditService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
@@ -17,8 +14,6 @@ import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @RequestMapping("/credits")
 @RequiredArgsConstructor
@@ -61,9 +56,8 @@ public class CreditController {
     @GetMapping("/all")
     public ResponseEntity<ResponseResult<List<CreditFindResult>>> readAll(@RequestParam Integer page){
         Pageable pageable = PageRequest.of(page, 5);
-        Stream<Credit> stream = creditService.findAll(pageable).get();
-        List<CreditFindResult> results =
-                stream.map(credit -> CreditFindResult.builder().build().convertToDto(credit)).collect(Collectors.toList());
+        List<CreditFindResult> results = creditService.findAll(pageable)
+                .stream().map(creditOutDto -> (CreditFindResult) creditOutDto).toList();
         return ResponseEntity.ok(ResponseResult.<List<CreditFindResult>>builder()
                 .code(0)
                 .message("All Credits Loaded Successfully.")
