@@ -5,7 +5,6 @@ import com.rostami.onlineservice.dto.in.create.MainServCreateParam;
 import com.rostami.onlineservice.dto.in.update.MainServUpdateParam;
 import com.rostami.onlineservice.dto.out.CreateUpdateResult;
 import com.rostami.onlineservice.dto.out.single.MainServFindResult;
-import com.rostami.onlineservice.entity.MainServ;
 import com.rostami.onlineservice.service.MainServService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
@@ -15,8 +14,6 @@ import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @RequiredArgsConstructor
 @RequestMapping("/mainServs")
@@ -61,9 +58,8 @@ public class MainServController {
     @GetMapping("/all")
     public ResponseEntity<ResponseResult<List<MainServFindResult>>> readAll(@RequestParam Integer page){
         Pageable pageable = PageRequest.of(page, 5);
-        Stream<MainServ> stream = mainServService.findAll(pageable).get();
-        List<MainServFindResult> results =
-                stream.map(mainServ -> MainServFindResult.builder().build().convertToDto(mainServ)).collect(Collectors.toList());
+        List<MainServFindResult> results = mainServService.findAll(pageable)
+                .stream().map(mainServOutDto -> (MainServFindResult) mainServOutDto).toList();
         return ResponseEntity.ok(ResponseResult.<List<MainServFindResult>>builder()
                 .code(0)
                 .message("Successfully Found All Main Services.")
