@@ -4,21 +4,17 @@ import com.rostami.onlineservice.dto.api.ResponseResult;
 import com.rostami.onlineservice.dto.in.create.OfferCreateParam;
 import com.rostami.onlineservice.dto.in.update.OfferUpdateParam;
 import com.rostami.onlineservice.dto.out.CreateUpdateResult;
-import com.rostami.onlineservice.dto.out.single.MainServFindResult;
 import com.rostami.onlineservice.dto.out.single.OfferFindResult;
-import com.rostami.onlineservice.entity.MainServ;
-import com.rostami.onlineservice.entity.Offer;
 import com.rostami.onlineservice.service.OfferService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @RequiredArgsConstructor
 @RequestMapping("/offers")
@@ -63,9 +59,8 @@ public class OfferController {
     @GetMapping("/all")
     public ResponseEntity<ResponseResult<List<OfferFindResult>>> readAll(@RequestParam Integer page){
         Pageable pageable = PageRequest.of(page, 5);
-        Stream<Offer> stream = offerService.findAll(pageable).get();
-        List<OfferFindResult> results =
-                stream.map(offer -> OfferFindResult.builder().build().convertToDto(offer)).collect(Collectors.toList());
+        List<OfferFindResult> results = offerService.findAll(pageable)
+                .stream().map(offerOutDto -> (OfferFindResult) offerOutDto).toList();
         return ResponseEntity.ok(ResponseResult.<List<OfferFindResult>>builder()
                 .code(0)
                 .message("Successfully Found All Offers.")
@@ -81,6 +76,17 @@ public class OfferController {
                 .code(0)
                 .message("Successfully Load All Related Offers.")
                 .data(allOffersOfExpert)
+                .build());
+    }
+
+    @GetMapping("/orderOffersByPrice/{adId}")
+    public ResponseEntity<ResponseResult<List<OfferFindResult>>> orderOffersByPrice(@PathVariable Long adId, @RequestParam Integer page){
+        Pageable pageable = PageRequest.of(page, 5, Sort.by("price"));
+        List<OfferFindResult> results = offerService.orderOffersByPrice(adId, pageable);
+        return ResponseEntity.ok(ResponseResult.<List<OfferFindResult>>builder()
+                .code(0)
+                .message("Successfully Load All Sorted Offers By Price.")
+                .data(results)
                 .build());
     }
 }
